fix: align nav-menu

--- a/src/app/core/components/nav-menu/nav-menu.component.scss
+++ b/src/app/core/components/nav-menu/nav-menu.component.scss
@@ -4,7 +4,7 @@
 	width: 48px;
 	height: 48px;
 	position: absolute;
-  right: 1px;
+  right: -25px;
 	top: 10px;
 	list-style: none;
   text-align: center;
